# UT_Villas_Walk

./: .gitmodules
team_ijnek/.github/workflows/: build_and_test_foxy.yaml
team_ijnek/motion/walk/: CMakeLists.txt  package.xml
team_ijnek/motion/walk/include/walk/: ActionCommand.hpp  BodyModel.hpp  MotionDefs.hpp  Sensors.hpp  angles.hpp  basic_math.hpp  bodyV6.hpp  walk.hpp
team_ijnek/motion/walk/src/: ActionCommand.cpp  BodyModel.cpp  Sensors.cpp  bodyV6.cpp  walk.cpp  walk_node.cpp
team_ijnek/motion/walk_utils/: CMakeLists.txt  package.xml
team_ijnek/motion/walk_utils/include/walk_utils/: MotionDefs.hpp  bodyV6.hpp
team_ijnek/motion/walk_utils/src/: bodyV6.cpp
team_ijnek/team_ijnek_launch/launch/: simulated_player_launch.py
walk_msg/msg/: Walk.msg
walk_sensor_msg/: CMakeLists.txt  package.xml
walk_sensor_msg/msg/: Sensor.msg
walk_trainer/: package.xml  setup.cfg  setup.py
walk_trainer/walk_trainer/: handle_monitor_msg.py  parser.py  var_tracker.py  walk_trainer.py
